--- a/css/estilos.css
+++ b/css/estilos.css
@@ -293,7 +293,7 @@ header nav a.activo {
   .left .content .social a span{
 	height: 40px;
 	width: 40px;
-	background:#8b0074;
+	background:#dd5ec8;
 	line-height: 40px;
 	text-align: center;
 	font-size: 18px;
@@ -301,11 +301,11 @@ header nav a.activo {
 	transition: 0.3s;
   }
   .left .content .social a span:hover{
-	background: #f14c4c;
+	background: #eb6969;
   }
   .center .content .fas{
 	font-size: 1.4375rem;
-	background: #8b0074;
+	background:#dd5ec8;
 	height: 45px;
 	width: 45px;
 	line-height: 45px;
@@ -315,7 +315,7 @@ header nav a.activo {
 	cursor: pointer;
   }
   .center .content .fas:hover{
-	background: #f14c4c;
+	background: #eb6969;
   }
   .center .content .text{
 	font-size: 1.0625rem;
