--- a/plugin/whatsapp-chat-support.css
+++ b/plugin/whatsapp-chat-support.css
@@ -38,7 +38,7 @@
         vertical-align: middle;
         padding: 9px 18px;
         border-radius: 50px;
-        background: #26C281;
+        background: #2bdd93;
         color: #fff;
         display: inline-block;
         margin-right: 3px;
@@ -75,7 +75,7 @@
         font-size: 12px;
         margin-right: 10px;
         margin-left: 10px;
-        background: #a93de78a;
+        background: #2bdd93;
         padding: 5px 10px;
         border-radius: 4px;
 
